2002-12-11  Douglas Bates  <bates@stat.wisc.edu>

	* R/lme.R (print.lme): Removed one more as.vector()

	* R/varFunc.R (print.summary.varFixed): changed  instances of
	deparse(as.vector(x)) to deparse(x) here and in many other places.

2002-09-10  Saikat DebRoy  <saikat@stat.wisc.edu>

	* nlsList.R (nlsList.formula): Use "try" instead of "restart".

2002-08-09  Douglas Bates  <bates@stat.wisc.edu>

	* R/groupedData.R: Fixed creation of grouped data from a formula
	only

	* R/newGenerics.R: Renamed the initialize generic and all methods
	and calls to Initialize so as not to conflict with the methods
	package.

2002-07-23  Douglas Bates  <bates@stat.wisc.edu>

	* R/lme.R (update.lme): Fix formula handling in update methods
	(Brian Ripley).

2002-04-20  Douglas Bates  <bates@stat.wisc.edu>

	* R/nlme.R: Bug fix by SDR - convergence criterion was being
	calculated incorrectly.

2002-04-04  Douglas Bates  <bates@stat.wisc.edu>

	* man/getVarCov.Rd: Added an example of the type="marginal"
	Corrected misplaced brace.

	* R/VarCov.R (getVarCov.lme): Added the getVarCov functions
	contributed by Mary Lindstrom <lindstro@biostat.wisc.edu>

2002-03-27  Douglas Bates  <bates@stat.wisc.edu>

	* R/lme.R (anova.lme): Change strvar != "NA" to !is.na(strvar)

2002-03-05  Douglas Bates  <bates@stat.wisc.edu>

	* man/ACF.gls.Rd: Changed Jose's email address on this and all the
	other man pages.

	* R/varFunc.R: Incorporate fix from Thomas Lumley and from Setzer
	Woodrow for the logic where ifelse(length(el) == 1, is used
	instead of if(length(el) == 1)

	* R/pdMat.R: Change all vestigial instances of T and F to TRUE and
	FALSE.

2001-12-18  Douglas Bates  <bates@stat.wisc.edu>

	* R/corStruct.R: Finally resolved the print.summary.corSymm
	controversy so it prints and it prints the correct value.

2001-12-10  Douglas Bates  <bates@stat.wisc.edu>

	* R/lme.R: unclassed the logLik component of an lme summary before
	trying to put it into a data frame for printing.	
