@@ -1,6 +1,6 @@
 Package: nlme
-Version: 3.1-35
-Date: 2002-12-22
+Version: 3.1-36
+Date: 2002-12-28
 Priority: recommended
 Title: Linear and nonlinear mixed effects models
 Author: Jose Pinheiro <Jose.Pinheiro@pharma.novartis.com>,
