@@ -1,3 +1,9 @@
+2002-12-27  Douglas Bates  <bates@stat.wisc.edu>
+
+
+	* R/newFunc.R (gsummary): Fix comparison to check for varying
+	columns.  Bug fix to #1775 by Dieter Menne.
+
 2002-12-11  Douglas Bates  <bates@stat.wisc.edu>
 
 	* R/lme.R (print.lme): Removed one more as.vector()
